# QtUniversalToolFrameWork

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
common/: animation.py  auto_wrap.py  color.py  config.py  icon.py  image_utils.py  menu_icon_manager.py  overload.py  router.py  screen.py  smooth_scroll.py  style_sheet.py  theme_listener.py
components/date_time/: picker_base.py  time_picker.py
components/dialog_box/: color_dialog.py  mask_dialog_base.py  message_box.py
components/layout/: flow_layout.py  v_box_layout.py
components/navigation/: __init__.py  navigation_interface.py  navigation_panel.py  navigation_widget.py  pivot.py
components/settings/: __init__.py  custom_color_setting_card.py  expand_setting_card.py  options_setting_card.py  setting_card.py  setting_card_group.py
components/widgets/: __init__.py  acrylic_label.py  button.py  card_widget.py  check_box.py  combo_box.py  command_bar.py  cycle_list_widget.py  flip_view.py  flyout.py  gallery_interface.py  icon_widget.py  image_canva.py  info_badge.py  info_bar.py  label.py  line_edit.py  list_view.py  menu.py  model_combo_box.py  pips_pager.py  progress_bar.py  progress_ring.py  scroll_area.py  scroll_bar.py  separator.py  slider.py  spin_box.py  stacked_widget.py  state_tool_tip.py  switch_button.py  tab_view.py  (+4 more)
docs/: index.md  installation.md  usage.md
resources/: resource.py  resource.qrc
view/: home_interface.py  image_view_interface.py  main_window.py  setting_interface.py
(+87 files in other folders)
