[project]
name = "QtUniversalToolFrameWork"
version = "0.1.7"
description = "qt通用工具框架是一个基于python的qt框架,用于快速开发qt应用程序"
readme = "README.md"
authors = [
  {name = "HJN", email = "17713131317@163.com"}
]
maintainers = [
  {name = "HJN", email = "17713131317@163.com"}
]
classifiers = [
    # TODO
]

license = {text = "MIT"}
dependencies = [
  "PyQt5>=5.15.0",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/HJN17/QtUniversalToolFrameWork/issues"
changelog = "https://github.com/HJN17/QtUniversalToolFrameWork/blob/master/changelog.md"
homepage = "https://github.com/HJN17/QtUniversalToolFrameWork"

[project.scripts]
QtUniversalToolFrameWork = "QtUniversalToolFrameWork.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
